--- a/V18/content/auswertung.tex
+++ b/V18/content/auswertung.tex
@@ -1,6 +1,11 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
+\subsection{Energiekalibrierung}
+
+Zur Kalibrierung des Detektors wird das Spektrum eines $^152Eu$-Strahlers aufgenommen.
+
+
 \begin{figure}
   \centering
   \includegraphics{plot.pdf}
