--- a/V18/content/auswertung.tex
+++ b/V18/content/auswertung.tex
@@ -1,6 +1,8 @@
 \section{Auswertung}
 \label{sec:Auswertung}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \subsection{Energiekalibrierung}
 
 Zur Energiekalibrierung des Detektors wird das Spektrum eines $\ce{^{152}Eu}$-Strahlers aufgenommen, welches in Abbildung
@@ -59,9 +61,9 @@ durchgeführt, die in Abildung \ref{fig:plot5} dargestellt ist.
 Die Regressionsparameter betragen
 
 \begin{align*}
-  m &= 0.403 \pm 0.000 \\
-  d &= -2.683 \pm 0.051
-\end{align*} \; .
+  m &= \num{0.403 +- 0.000} \\
+  d &= \num{-2.683 +- 0.051} \; .
+\end{align*}
 
 \begin{figure}
   \centering
@@ -69,3 +71,79 @@ Die Regressionsparameter betragen
   \caption{Lineare Regression der Energie-Kanalnummer-Wertepaare des $\ce{^{152}Eu}$}
   \label{fig:plot5}
 \end{figure}
+
+Die statistischen Fehler der Regressionskonstanten sind mit $\SI{0.0}{\percent}$ und $\SI{1.9}{\percent}$ sehr gering.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\subsection{Effizienzbestimmung}
+
+Die Effizienz
+
+\begin{equation}
+  Q = \frac{4 \pi Z}{\Omega A W t}
+\end{equation}
+
+wird aus dem Zählergebnis $Z$, dem Raumwinkel $\Omega$, der Aktivität $A$ des Strahlers, 
+der Emmisionswahrscheinlichkeit $W$ und der Messzeit $t$ bestimmt.
+
+Der Raumwinkel ergibt sich zu 
+
+\begin{equation}
+  \Omega = 2 \pi \left(1 - \frac{l}{\sqrt{l^2 - r^2}}\right) \approx \num{1.73} \pi \; ,
+\end{equation} 
+
+mit dem Radius $r = \SI{2.25}{\centi\meter}$ und dem Abstand $l = \SI{8}{\centi\meter}$ zwischen Probe und Detektor.
+
+Die Aktivität am Messtag wird bestimmt als
+
+\begin{equation}
+  A(t) = A_0 \cdot \text{exp} \left(- \frac{\text{ln}(2)}{t_{\sfrac{1}{2}}} \cdot t \right)  \; .
+\end{equation}
+
+Mit einer Anfangsaktivität $A_0 = \SI{4130 +- 60}{\becquerel}$ am 01.10.2000 und der Halbwertszeit
+$t_{\sfrac{1}{2}} = \SI{4943 +- 5}{\day}$ ergibt sich nach einer Zeit von $t = \SI{7177}{\day}$
+eine Aktivität von $A_{25.05.2020} = \SI{1510 +- 22}{\becquerel}$.
+Der statistische Fehler von $A_{25.05.2020}$ ergibt sich nach 
+Gaußscher Fehlerfortpflanzungaus denen von $A_0$ und $t_{\sfrac{1}{2}}$.
+
+Zuletzt sind noch die Zählraten $Z$ der Peaks zu bestimmen. Dazu werden die gefitteten Gaußnäherungen integriert. 
+Der konstante Parameter $b$ wird dabei vernachlässigt, da er das Niveau des umgebenden Spektrums angibt und somit nicht zur 
+Zählrate $Z$ des Peaks beiträgt. Aus der Integration folgt dann
+
+\begin{equation}
+  Z = \int_{-\infty}^\infty \; a \cdot \text{exp}\left( - \frac{(x-\mu_i)^2}{b}\right) \; \text{d}x = a \sqrt{b\pi} \; .
+\end{equation}
+
+Der statistische Fehler der Zählrate wird aufgrund des poissonverteilten Zerfallswahrscheinlichkeit als $\sqrt{Z}$ angenommen.
+
+In der erweiterten Tabelle \ref{tab:mess2} sind die errechneten Effizienzen $Q$, Zählraten $Z$ und 
+Emmisionswahrscheinlichkeiten $W$ aufgeführt.
+
+\begin{table}
+  \centering
+  \caption{Effizienzen und zu deren Berechnung notwendige Größen des $\ce{^{152}Eu}$-Strahlers}
+  \label{tab:mess2}
+  \sisetup{table-format=2.1}
+  \begin{tabular}{c c c c c c}
+  \toprule
+  $E_i \;/\; \si{\kilo\eV}$ & $W \;\text{in}\; \si{\percent}$ & $a$ & $b$ & $Z$ & $Q$ \\
+  \midrule
+        121,78 & 28,6 & 3493,0 $\pm$ 15,0 &  3,5 $\pm$ 0,0 & & \\
+        244,70 &  7,6 &  535,0 $\pm$  9,0 &  4,2 $\pm$ 0,2 & & \\
+        344,30 & 26,5 & 1140,0 $\pm$  6,0 &  5,5 $\pm$ 0,1 & & \\
+        411,12 &  2,2 &   74,7 $\pm$  3,5 &  5,7 $\pm$ 0,6 & & \\
+        443,96 &  3,1 &   94,2 $\pm$  3,0 &  6,4 $\pm$ 0,5 & & \\
+        778,90 & 12,9 &  143,3 $\pm$  2,4 & 14,3 $\pm$ 0,5 & & \\
+        867,37 &  4,2 &   42,5 $\pm$  2,1 & 17,1 $\pm$ 2,0 & & \\
+        964,08 & 14,6 &  120,3 $\pm$  2,2 & 19,3 $\pm$ 0,8 & & \\
+       1085,90 & 10,2 &   67,5 $\pm$  2,2 & 30,2 $\pm$ 2,3 & & \\
+       1112,10 & 13,6 &   88,5 $\pm$  2,6 & 23,2 $\pm$ 1,7 & & \\
+       1408,00 & 21,0 &   90,7 $\pm$  1,4 & 28,9 $\pm$ 1,1 & & \\
+  \bottomrule
+  \end{tabular}
+  \end{table}
+
+
+
+
