--- a/V18/content/diskussion.tex
+++ b/V18/content/diskussion.tex
@@ -1,2 +1,5 @@
-\section{Diskussion}
+\section{Literaturverzeichnis}
 \label{sec:Diskussion}
+
+[1] Laboratoire National Henri Becquerel:
+\url{http://www.nucleide.org/Laraweb/index.php}; letzter Zugriff 16.06.2020.
