--- a/V18/content/diskussion.tex
+++ b/V18/content/diskussion.tex
@@ -1,5 +1,11 @@
 \section{Literaturverzeichnis}
 \label{sec:Diskussion}
 
-[1] Laboratoire National Henri Becquerel:
+[1] Praktikumsanleitung. Versuch V18 - Der Reinst-Germanium-Detektor als Instrument
+der Gamma-Spektroskopie:
+
+\url{http://129.217.224.2/HOMEPAGE/PHYSIKER/BACHELOR/FP/SKRIPT/V18.pdf}.
+
+[2] Laboratoire National Henri Becquerel:
+
 \url{http://www.nucleide.org/Laraweb/index.php}; letzter Zugriff 16.06.2020.
